edited styles page.

--- a/cakescommerce/styles/globals.css
+++ b/cakescommerce/styles/globals.css
@@ -223,7 +223,7 @@ text-align: end;
 }
 .banner-desc{
   display: flex ;
-  justify-content: space-between;
+  justify-content: right;
 }
 .banner-desc button{
   border-radius: 15px;
